# cutoff-generator-fibonacci

./: .travis.yml  CMakeLists.txt  FindGecode.cmake  README
src/include/: CutoffFibonacci.hpp
tests/: CMakeLists.txt  CutOffFibonacciTest.cpp
